CMAKE_MINIMUM_REQUIRED(VERSION 3.23)
PROJECT(leetcode-cpp)

SET(CMAKE_CXX_STANDARD 23)

IF(MSVC)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
ELSE()
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -g3")
ENDIF()

IF(UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fsanitize=undefined -fno-omit-frame-pointer")
ENDIF()

# Optimisation
# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -march=native -mtune=native -finline-functions -ffast-math -fomit-frame-pointer")

ADD_EXECUTABLE(leetcode-cpp main.cpp 2302/230218.cpp 2302/230218-CN.cpp 2302/230219-CN.cpp 2302/230219.cpp)

# ADD_SUBDIRECTORY(2112)
# ADD_SUBDIRECTORY(2201)
# ADD_SUBDIRECTORY(2202)
# ADD_SUBDIRECTORY(2203)
# ADD_SUBDIRECTORY(2204)
# ADD_SUBDIRECTORY(2205)
# ADD_SUBDIRECTORY(2206)
# ADD_SUBDIRECTORY(2207)
# ADD_SUBDIRECTORY(2210)
ADD_SUBDIRECTORY(2302)
ADD_SUBDIRECTORY(more)
